# stripe-subscriptions

./: LICENSE.txt  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: stripe-subscriptions.yml
subscriptions/: __init__.py  decorators.py  exceptions.py  tests.py  types.py
tests/: conftest.py  test_subscriptions.py
