[bdist_wheel]
universal = 1

[metadata]
nam = stripe-subscriptions
license_file = LICENSE.txt
author = Paul Martin
url = https://github.com/primal100/stripe-subscriptions
description = Easier management of subscriptions with Stripe
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages =
    subscriptions
python_requires = >=3.6