[bdist_wheel]

[metadata]
name = stripe-subscriptions
license_file = LICENSE.txt
author = Paul Martin
url = https://github.com/primal100/stripe-subscriptions
description = Easier management of subscriptions with Stripe
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages =
    subscriptions
python_requires>=3.6
setup_requires =
    wheel
install_requires =
    stripe
    typing-extensions>=3.10.0.0; python_version < "3.8"
